--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </nav>
         <div class="top_header_logo_wrapper"><!-- LOGO -->
-            <a href="/index.html" class="top_header_logo_link">
+            <a href="./index.html" class="top_header_logo_link">
                 <h1 class="top_header_logo">
                     <img src="./img/SVG/icon-logo.svg" alt="LOGO">
                 </h1>
@@ -61,16 +61,16 @@
         <nav id="main-menu" class="top_header_menu_wrapper" ><!-- 主要menu -->
             <ul class="top_header_menu_list_Wrapper">
                 <li class="top_header_menu_list">
-                    <a href="/about.html" class="active-trail_1">About</a>
+                    <a href="./about.html" class="active-trail_1">About</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/calendar.html" class="active-trail_2">Calendar</a>
+                    <a href="./calendar.html" class="active-trail_2">Calendar</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/media.html" class="active-trail_3">Media</a>
+                    <a href="./media.html" class="active-trail_3">Media</a>
                 </li>
                 <li class="top_header_menu_list">
-                    <a href="/news.html" class="active-trail_4">News</a>
+                    <a href="./news.html" class="active-trail_4">News</a>
                 </li>
             </ul>
         </nav>
